--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <h1>Markus Borgs portfolio</h1>
     <h2>I am a webdevoloper</h2>
     <hr>
-    <h3><a href="./public/movie-ranking.html">Movie Ranking project</a></h3>
-    <img src="./assets/images/Screenshot 2025-03-28 10.02.02.png" height="200" alt="movie-ranking-project-preview">
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/Screenshot 2025-03-28 10.14.45.png" height="200" alt="birthday-invite-project-preview">
+    <h3><a href="movie-ranking.html">Movie Ranking project</a></h3>
+    <img src="Screenshot 2025-03-28 10.02.02.png" height="200" alt="movie-ranking-project-preview">
+    <h3><a href="birthday-invite.html">Birthday Invite Project</a></h3>
+    <img src="Screenshot 2025-03-28 10.14.45.png" height="200" alt="birthday-invite-project-preview">
     <hr>
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
+    <a href="about.html">About Me</a>
+    <a href="contact.html">Contact Me</a>
  </body>
  </html>
